--- a/job-server-api/pom.xml
+++ b/job-server-api/pom.xml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.altiscale.spark.jobserver</groupId>
     <artifactId>spark-jobserver-parent_2.10</artifactId>
@@ -9,12 +10,11 @@
   </parent>
 
   <groupId>com.altiscale.spark.jobserver</groupId>
-  <artifactId>akka-app_2.10</artifactId>
+  <artifactId>job-server-api_2.10</artifactId>
   <packaging>jar</packaging>
-  <name>akka-app</name>
-
-  <description>Common Akka application stack: metrics, tracing, logging, and more.</description>
+  <description>job-server-api</description>
   <url>https://github.com/spark-jobserver/spark-jobserver</url>
+  <name>job-server-api</name>
 
   <licenses>
     <license>
@@ -30,6 +30,11 @@
   </organization>
 
   <dependencies>
+    <!-- Defined in parent pom.xml -->
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.scoverage</groupId>
       <artifactId>scalac-scoverage-runtime_2.10</artifactId>
@@ -39,61 +44,18 @@
       <artifactId>scalac-scoverage-plugin_2.10</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
-      <version>4.0.23.Final</version>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_2.10</artifactId>
     </dependency>
     <dependency>
       <groupId>com.typesafe</groupId>
       <artifactId>config</artifactId>
-      <version>1.2.1</version>
     </dependency>
+    <!-- Individual dependencies -->
     <dependency>
-      <groupId>io.spray</groupId>
-      <artifactId>spray-testkit_2.10</artifactId>
-      <version>1.3.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-slf4j_2.10</artifactId>
-      <version>2.3.4</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.spray</groupId>
-      <artifactId>spray-json_2.10</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>io.spray</groupId>
-      <artifactId>spray-can_2.10</artifactId>
-      <version>1.3.3</version>
-    </dependency>
-    <dependency>
-      <groupId>io.spray</groupId>
-      <artifactId>spray-routing_2.10</artifactId>
-      <version>1.3.3</version>
-    </dependency>
-    <dependency>
-      <groupId>io.spray</groupId>
-      <artifactId>spray-client_2.10</artifactId>
-      <version>1.3.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.yammer.metrics</groupId>
-      <artifactId>metrics-core</artifactId>
-      <version>2.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.joda</groupId>
-      <artifactId>joda-convert</artifactId>
-      <version>1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
-      <version>2.2</version>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.0.23.Final</version>
     </dependency>
   </dependencies>
 
@@ -101,4 +63,5 @@
     <outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>
     <testOutputDirectory>target/scala-${scala.binary.version}/test-classes</testOutputDirectory>
   </build>
+
 </project>
