--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
   <modules>
     <module>akka-app</module>
+    <module>job-server-api</module>
   </modules>
 
   <properties>
@@ -99,6 +100,24 @@
   </properties>
 
   <dependencies>
+    <!--
+         This is needed by the scalatest plugin, and so is declared here to be available in
+         all child modules, just as scalatest is run in all children
+    -->
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${scala.binary.version}</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>${akka.group}</groupId>
+      <artifactId>akka-testkit_${scala.binary.version}</artifactId>
+      <version>${akka.version}</version>
+    </dependency>
+  </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.10</artifactId>
@@ -134,24 +153,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <!--
-         This is needed by the scalatest plugin, and so is declared here to be available in
-         all child modules, just as scalatest is run in all children
-    -->
-    <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.binary.version}</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>${akka.group}</groupId>
-      <artifactId>akka-testkit_${scala.binary.version}</artifactId>
-      <version>${akka.version}</version>
-    </dependency>
-  </dependencies>
-
-  <dependencyManagement>
-    <dependencies>
       <dependency>
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-compiler</artifactId>
@@ -182,6 +183,26 @@
         <artifactId>scalatest_${scala.binary.version}</artifactId>
         <version>2.2.1</version>
         <scope>test</scope>
+      </dependency>
+      <!-- for configuration, especially json format configs -->
+      <dependency>
+        <groupId>com.typesafe</groupId>
+        <artifactId>config</artifactId>
+        <version>1.2.1</version>
+        <scope>compile</scope>
+      </dependency>
+      <!-- code and branch coverage -->
+      <dependency>
+        <groupId>org.scoverage</groupId>
+        <artifactId>scalac-scoverage-runtime_2.10</artifactId>
+        <version>1.1.0</version>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.scoverage</groupId>
+        <artifactId>scalac-scoverage-plugin_2.10</artifactId>
+        <version>1.1.0</version>
+        <scope>compile</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
