[AE-1539] Added job-server pom.xml and module to parent pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
   <modules>
     <module>akka-app</module>
     <module>job-server-api</module>
+    <module>job-server</module>
   </modules>
 
   <properties>
