[AE-1539] Add maven profile to support multiple version of spark and hadoop in build

--- a/pom.xml
+++ b/pom.xml
@@ -453,6 +453,63 @@
         </dependencies>
       </dependencyManagement>
     </profile>
+
+    <profile>
+      <id>hadoop-2.4</id>
+      <properties>
+        <hadoop.version>2.4.1</hadoop.version>
+        <yarn.version>2.4.1</yarn.version>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>hadoop-2.7</id>
+      <properties>
+        <hadoop.version>2.7.1</hadoop.version>
+        <yarn.version>2.7.1</yarn.version>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>spark-1.4</id>
+      <properties>
+        <spark.version>1.4.1</spark.version>
+        <scala.version>2.10.4</scala.version>
+        <scala.binary.version>2.10</scala.binary.version>
+        <hive.version>0.13.1a</hive.version>
+        <!-- Version used for internal directory structure -->
+        <hive.version.short>0.13.1</hive.version.short>
+        <jets3t.version>0.9.3</jets3t.version>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>spark-1.5</id>
+      <properties>
+        <spark.version>1.5.2</spark.version>
+        <scala.version>2.10.4</scala.version>
+        <scala.binary.version>2.10</scala.binary.version>
+        <hive.version>1.2.1.spark</hive.version>
+        <!-- Version used for internal directory structure -->
+        <hive.version.short>1.2.1</hive.version.short>
+        <jets3t.version>0.9.3</jets3t.version>
+      </properties>
+    </profile>
+
+    <!-- TODO: not yet supported -->
+    <profile>
+      <id>spark-1.6</id>
+      <properties>
+        <spark.version>1.6.0</spark.version>
+        <scala.version>2.10.5</scala.version>
+        <scala.binary.version>2.10</scala.binary.version>
+        <hive.version>1.2.1.spark</hive.version>
+        <!-- Version used for internal directory structure -->
+        <hive.version.short>1.2.1</hive.version.short>
+        <jets3t.version>0.9.3</jets3t.version>
+      </properties>
+    </profile>
+
   </profiles>
 
   <repositories>
