--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <module>job-server-api</module>
     <module>job-server</module>
     <module>job-server-extras</module>
+    <module>job-server-tests</module>
   </modules>
 
   <properties>
@@ -310,11 +311,6 @@
               <arg>-Xlint:all,-serial,-path</arg>
             </compilerArgs>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.6</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
